--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "comp-test"
+name = "garyexplains-compilertest-rust"
 version = "0.1.0"
 authors = ["Michael Barber <60610888+mike-barber@users.noreply.github.com>"]
-edition = "2020"
+edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
